--- a/templates/base.gohtml
+++ b/templates/base.gohtml
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ template "title" }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.19/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+{{/*    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.19/dist/full.min.css" rel="stylesheet" type="text/css" />*/}}
+{{/*    <script src="https://cdn.tailwindcss.com"></script>*/}}
     <script src="https://unpkg.com/htmx.org@1.9.9"></script>
 </head>
 <body>
