--- a/templates/clients.gohtml
+++ b/templates/clients.gohtml
@@ -1,9 +1,12 @@
-{{ define "title" }}Klienten{{ end }}
+{{- define "title"}}
+    Klienten
+{{end}}
 
-{{ define "body" }}
+{{define "body"}}
     {{template "navigation.gohtml" "Clients"}}
-    Test4
-{{ end }}
+    {{template "clientForm.gohtml" .}}
+    {{template "clientTable.gohtml" .}}
+{{end}}
 
 <!--TODO add ability to modify user-->
 <!--TODO add ability to remove user-->
