--- a/templates/clientForm.gohtml
+++ b/templates/clientForm.gohtml
@@ -1,71 +1,64 @@
-<div class="flex justify-center">
-    <form class="w-full max-w-lg" id="clientForm" hx-post="/client" hx-target="#client" hx-swap="outerHTML">
-        <div class="flex flex-wrap -mx-3 mb-3">
-            <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="firstname">
+<div>
+    <form id="clientForm" hx-post="/client" hx-target="#client" hx-swap="outerHTML">
+        <div>
+            <div>
+                <label for="firstname">
                     Vorname
                 </label>
-                <input type="text" id="firstname" name="firstname" placeholder="Max" class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white">
+                <input type="text" id="firstname" name="firstname" placeholder="Max">
             </div>
-            <div class="w-full md:w-1/2 px-3">
-                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="lastname">
+            <div>
+                <label for="lastname">
                     Nachname
                 </label>
-                <input type="text" id="lastname" name="lastname" placeholder="Mustermann" class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white">
+                <input type="text" id="lastname" name="lastname" placeholder="Mustermann">
             </div>
         </div>
-        <div class="flex flex-wrap -mx-3 mb-3">
-            <div class="w-full px-3">
-                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="email">
+        <div>
+            <div>
+                <label for="email">
                     Email
                 </label>
-                <input type="email" id="email" name="email" placeholder="max@mustermann.de" class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
+                <input type="email" id="email" name="email" placeholder="max@mustermann.de">
             </div>
         </div>
-        <div class="divider">Erinnerung</div>
-        <div class="flex flex-wrap -mx-3 mb-6">
-            <div class="w-full md:w-1/2 px-3 mb-5 md:mb-0">
-                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="reminderMonth">
+        <div>Erinnerung</div>
+        <div>
+            <div>
+                <label for="reminderMonth">
                     Monat
                 </label>
-                <div class="relative">
-                    <select id="reminderMonth" name="reminderMonth" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
-                        <option selected>Januar</option>
-                        <option>Februar</option>
-                        <option>März</option>
-                        <option>April</option>
-                        <option>Mai</option>
-                        <option>Juni</option>
-                        <option>Juli</option>
-                        <option>August</option>
-                        <option>September</option>
-                        <option>Oktober</option>
-                        <option>November</option>
-                        <option>Dezember</option>
+                <div>
+                    <select id="reminderMonth" name="reminderMonth">
+                        <option value="1" selected>Januar</option>
+                        <option value="2">Februar</option>
+                        <option value="3">März</option>
+                        <option value="4">April</option>
+                        <option value="5">Mai</option>
+                        <option value="6">Juni</option>
+                        <option value="7">Juli</option>
+                        <option value="8">August</option>
+                        <option value="9">September</option>
+                        <option value="10">Oktober</option>
+                        <option value="11">November</option>
+                        <option value="12">Dezember</option>
                     </select>
-                    <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
-                        <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
-                    </div>
                 </div>
             </div>
-            <div class="w-full md:w-1/2 px-3 mb-5 md:mb-0">
-                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="reminderFrequency">
+            <div>
+                <label for="reminderFrequency">
                     Frequenz
                 </label>
-                <div class="relative">
-                    <select id="reminderFrequency" name="reminderFrequency" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
-                        <option selected>Halbjährlich</option>
-                        <option>Jährlich</option>
+                <div>
+                    <select id="reminderFrequency" name="reminderFrequency">
+                        <option value="1" selected>Halbjährlich</option>
+                        <option value="2">Jährlich</option>
                     </select>
-                    <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
-                        <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
-                    </div>
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
-        <div class="flex flex-wrap justify-center">
-            <input type="submit" value="Hinzufügen" class="btn btn-block">
+        <div>
+            <input type="submit" value="Hinzufügen">
         </div>
     </form>
 </div>
