fix client submit

--- a/templates/clientForm.gohtml
+++ b/templates/clientForm.gohtml
@@ -1,5 +1,5 @@
 <div>
-    <form id="clientForm" hx-post="/client" hx-target="#client" hx-swap="outerHTML">
+    <form id="clientForm" hx-post="/client" hx-swap="outerHTML">
         <div>
             <div>
                 <label for="firstname">
