--- a/templates/clientTableRowEdit.gohtml
+++ b/templates/clientTableRowEdit.gohtml
@@ -29,7 +29,7 @@
         <button disabled>Löschen</button>
     </td>
     <td>
-        <button hx-get="/clients/{{.Id}}">Abbrechen</button>
-        <button hx-put="/clients/{{.Id}}" hx-include="closest tr">OK</button>
+        <button hx-get="/client/{{.Id}}">Abbrechen</button>
+        <button hx-put="/client/{{.Id}}" hx-include="closest tr">Speichern</button>
     </td>
 </tr>
