Addition of readme and email target

--- a/templates/navigation.gohtml
+++ b/templates/navigation.gohtml
@@ -2,7 +2,7 @@
     <nav>
         <ul>
             <li><a href="/clients" {{if eq . "Clients"}} class="active" {{end}}>Klienten</a></li>
-            <li><a href="" {{if eq . "Emails"}} class="active" {{end}}>Emails</a></li>
+            <li><a href="/emails" {{if eq . "Emails"}} class="active" {{end}}>Emails</a></li>
             <li><a href="/settings" {{if eq . "Settings"}} class="active" {{end}}>Settings</a></li>
         </ul>
     </nav>
