--- a/templates/clientTable.gohtml
+++ b/templates/clientTable.gohtml
@@ -5,8 +5,8 @@
                 <th>Vorname</th>
                 <th>Nachname</th>
                 <th>Email</th>
-                <th>Erinnerungs Month</th>
                 <th>Erinnerungs Frequenz</th>
+                <th>Letzte Erinnerung</th>
                 <th>Registrierungsdatum</th>
                 <th></th>
                 <th></th>
