--- a/templates/navigation.gohtml
+++ b/templates/navigation.gohtml
@@ -1,9 +1,9 @@
 <header>
     <nav>
         <ul>
-            <li><a href="/clients" {{if eq . "Clients"}} class="active" {{end}}>Klienten</a></li>
-            <li><a href="/emails" {{if eq . "Emails"}} class="active" {{end}}>Emails</a></li>
-            <li><a href="/settings" {{if eq . "Settings"}} class="active" {{end}}>Settings</a></li>
+            <li><a href="/client" {{if eq . "Clients"}} class="active" {{end}}>Klienten</a></li>
+            <li><a href="/email" {{if eq . "Emails"}} class="active" {{end}}>Emails</a></li>
+            <li><a href="/setting" {{if eq . "Settings"}} class="active" {{end}}>Settings</a></li>
         </ul>
     </nav>
     <div id="simulateDarkMode">
