--- a/templates/clientTableRow.gohtml
+++ b/templates/clientTableRow.gohtml
@@ -2,8 +2,8 @@
     <td>{{.FirstName}}</td>
     <td>{{.LastName}}</td>
     <td>{{.Email}}</td>
-    <td>{{.ReminderMonth}}</td>
     <td>{{.ReminderFrequency.StringGerman}}</td>
+    <td>{{.LastEmail}}</td>
     <td>{{.RegistrationDate}}</td>
     <td>
         <button hx-delete="/client/{{.Id}}" hx-confirm="Sind Sie sicher?" hx-swap="swap:1s">Löschen</button>
