--- a/templates/clientTableRowEdit.gohtml
+++ b/templates/clientTableRowEdit.gohtml
@@ -3,27 +3,12 @@
     <td><input type="text" name="lastname" value="{{.LastName}}"></td>
     <td><input type="email" name="email" value="{{.Email}}"></td>
     <td>
-        <select name="reminderMonth">
-            <option value="1" {{if eq .ReminderMonth 1}}selected{{end}}>Januar</option>
-            <option value="2" {{if eq .ReminderMonth 2}}selected{{end}}>Februar</option>
-            <option value="3" {{if eq .ReminderMonth 3}}selected{{end}}>März</option>
-            <option value="4" {{if eq .ReminderMonth 4}}selected{{end}}>April</option>
-            <option value="5" {{if eq .ReminderMonth 5}}selected{{end}}>Mai</option>
-            <option value="6" {{if eq .ReminderMonth 6}}selected{{end}}>Juni</option>
-            <option value="7" {{if eq .ReminderMonth 7}}selected{{end}}>Juli</option>
-            <option value="8" {{if eq .ReminderMonth 8}}selected{{end}}>August</option>
-            <option value="9" {{if eq .ReminderMonth 9}}selected{{end}}>September</option>
-            <option value="10" {{if eq .ReminderMonth 10}}selected{{end}}>Oktober</option>
-            <option value="11" {{if eq .ReminderMonth 11}}selected{{end}}>November</option>
-            <option value="12" {{if eq .ReminderMonth 12}}selected{{end}}>Dezember</option>
-        </select>
-    </td>
-    <td>
         <select name="reminderFrequency">
             <option value="1" {{if eq .ReminderFrequency 1}}selected{{end}}>Halbjährlich</option>
             <option value="2" {{if eq .ReminderFrequency 2}}selected{{end}}>Jährlich</option>
         </select>
     </td>
+    <td>{{.LastEmail}}</td>
     <td>{{.RegistrationDate}}</td>
     <td>
         <button disabled>Löschen</button>
