--- a/templates/clientTable.gohtml
+++ b/templates/clientTable.gohtml
@@ -1,13 +1,13 @@
-<div>
-    <table>
+<div class="content">
+    <table class="client-table">
         <thead>
             <tr>
                 <th>Vorname</th>
                 <th>Nachname</th>
                 <th>Email</th>
-                <th>Erinnerungs Frequenz</th>
+                <th style="width: auto;">Frequenz</th>
                 <th>Letzte Erinnerung</th>
-                <th>Registrierungsdatum</th>
+                <th>Registrierung</th>
                 <th></th>
                 <th></th>
             </tr>
