--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,7 +71,6 @@ nav ul li a.active {
 
 main {
     display: flex;
-    border: purple 5px solid;
     justify-content: center;
 }
 
@@ -81,9 +80,181 @@ main {
     min-width: 0;
     gap: 2rem;
     overflow: scroll;
-    border: red 1px solid;
+    align-items: center;
+    padding-top: 1rem;
+}
 
-    & > div {
-        border: green 1px solid;
+/*reset browser defaults*/
+button,
+fieldset,
+input,
+legend,
+select,
+textarea {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    outline: none;
+}
+
+.content {
+    border: var(--accent-background-color) 1px solid;
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    padding: 1rem;
+    /*background-color: var(--color-background-accent)*/
+}
+
+button, input[type="submit"] {
+    width: 100%;
+    background-color: var(--accent-color);
+    color: var(--color-background-accent);
+    border: var(--accent-background-color) 2px solid;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+input[type="text"], input[type="email"], input[type="month"], input[type="number"], input[type="password"], select {
+    width: 100%;
+    border: var(--color-text-contrast) 2px solid;
+    background-color: var(--color-background-accent);
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    font-size: 1em;
+}
+
+/*deactivate arrows on number input*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
+
+input:focus, select:focus {
+    box-shadow: 0 0 10px var(--accent-color);
+}
+
+select {
+    background-image:
+            linear-gradient(45deg, transparent 50%, var(--accent-color) 50%),
+            linear-gradient(135deg, var(--accent-color) 50%, transparent 50%),
+            linear-gradient(to right, var(--accent-background-color), var(--accent-background-color));
+    background-position:
+            calc(100% - 20px) calc(.8em + 2px),
+            calc(100% - 15px) calc(.8em + 2px),
+            100% 0;
+    background-size:
+            5px 5px,
+            5px 5px,
+            2.5em 2.5em;
+    background-repeat: no-repeat;
+}
+
+select:focus {
+    background-image:
+            linear-gradient(45deg, var(--accent-color) 50%, transparent 50%),
+            linear-gradient(135deg, transparent 50%, var(--accent-color) 50%),
+            linear-gradient(to right, var(--accent-background-color), var(--accent-background-color));
+    background-position:
+            calc(100% - 15px) .8em,
+            calc(100% - 20px) .8em,
+            100% 0;
+    background-size:
+            5px 5px,
+            5px 5px,
+            2.5em 2.5em;
+    background-repeat: no-repeat;
+}
+
+.form-small {
+    max-width: calc(var(--max-width)/3);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    box-sizing: border-box;
+
+    & .span-2 {
+        grid-column: 1 / span 2;
     }
+
+    & .divider {
+        display: flex;
+        align-items: center;
+        text-transform: uppercase;
+    }
+
+    & .divider::before, .divider::after {
+        flex-grow: 1;
+        content: '';
+        padding: 1px;
+        background-color: var(--color-text-contrast);
+        margin: 5px;
+    }
+}
+
+.client-table {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    border-collapse: collapse;
+    table-layout: fixed;
+    width: 100%;
+    max-width: var(--max-width);
+    overflow: scroll;
+
+    & > thead > tr {
+        background-color: var(--accent-color);
+        color: var(--color-background-accent);
+        text-align: left;
+    }
+
+    & th {
+        height: 2rem;
+    }
+
+    & th, td {
+        padding: 0.5rem;
+    }
+
+    & > tbody > tr {
+        border-bottom: 1px solid var(--color-text-contrast);
+    }
+
+    & > tbody > tr:nth-child(even) {
+        background-color: var(--accent-background-color);
+    }
+
+    & > tbody > tr:last-of-type {
+        border-bottom: 2px solid var(--accent-color);
+    }
+
+    & > tbody > tr:hover {
+        font-weight: bold;
+    }
+}
+
+button, input[type="submit"] {
+    width: 100%;
+    background-color: var(--accent-color);
+    color: var(--color-background-accent);
+    border: var(--accent-background-color) 2px solid;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+button:disabled {
+    background-color: var(--color-text-contrast);
+    border: var(--color-text-contrast) 2px solid;
+    cursor: not-allowed;
 }
