--- a/templates/clientTable.gohtml
+++ b/templates/clientTable.gohtml
@@ -1,5 +1,5 @@
 <div class="content">
-    <table class="client-table">
+    <table class="reminder-table">
         <thead>
             <tr>
                 <th>Vorname</th>
